forgivable hover dropdown and js to prevent dropdown going off-screen

--- a/resources/css/header.scss
+++ b/resources/css/header.scss
@@ -5,43 +5,32 @@ $primary-color: #ab0c2f;
 
 :focus {
   outline: none;
-  box-shadow: 0 0 0 3px #ab0c2f;
+  box-shadow: 0 0 0 3px #72081f;
+}
+
+header {
+  position: relative !important;
+  -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.1);
+  -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.1);
+  box-shadow: 0 3px 5px rgba(57, 63, 72, 0.1);
 }
 
 .skip-link {
   position: absolute;
-  left: 0;
   top: -40px;
+  left: 0;
   background: white;
-  color: #ab0c2f;
+  color: $primary-color;
   font-weight: bold;
   padding: 8px 16px;
   text-decoration: none;
-  border-radius: 0; /* no rounding */
-  outline-offset: 4px;
-}
-
-.skip-link:focus {
-  top: 10px;
-  left: 10px;
-  border-radius: 0 !important;
-  box-shadow: 0 0 0 2px black;
-}
-
-@mixin menu-item {
-  text-decoration: none;
-  padding: 1rem;
-
-  &:hover {
-    background: red;
-    cursor: pointer;
+  border-radius: 0;
+  &:focus {
+    top: 10px;
+    left: 10px;
+    border-radius: 0 !important;
+    box-shadow: 0 0 0 2px black;
   }
-}
-
-header {
-  -webkit-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.1);
-  -moz-box-shadow: 0 3px 5px rgba(57, 63, 72, 0.1);
-  box-shadow: 0 3px 5px rgba(57, 63, 72, 0.1);
 }
 
 .top-message {
@@ -53,6 +42,12 @@ header {
   justify-content: space-between;
 }
 
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .primary-navigation-wrapper {
   padding: $menu-padding;
   display: flex;
@@ -60,117 +55,102 @@ header {
   justify-content: center;
 }
 
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-ul.primary-navigation > .menu-item.menu-item-has-children {
-  border-bottom: $dropdown-gap solid transparent;
-  margin-bottom: -$dropdown-gap;
-}
-
-ul.primary-navigation
-  > .menu-item
-  > .sub-menu
-  > .menu-item.menu-item-has-children {
-  border-right: $dropdown-gap solid transparent;
-  margin-right: -$dropdown-gap;
-}
-
 ul.primary-navigation {
-  display: flex;
   list-style-type: none;
+  display: flex;
+  gap: 1em;
   padding: 0;
   margin: 0;
 }
 
-ul.primary-navigation {
-  .menu-item {
+ul.primary-navigation ul.sub-menu {
+  transition: all 100ms ease-in !important;
+
+  white-space: nowrap;
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+}
+
+ul.primary-navigation li.menu-item {
+  &:hover,
+  &:focus-within {
     & > a {
-      display: inline-block;
-      width: 100%;
-      padding: 1rem;
-      color: black;
-      text-decoration: none;
-    }
-
-    &.menu-item-has-children {
-      position: relative;
-      & > a {
-        &:after {
-          content: '';
-          border: 4px solid transparent;
-          border-top: 6px solid grey;
-          margin-left: 10px;
-          margin-bottom: 4px;
-          display: inline-block;
-          vertical-align: bottom;
-        }
-      }
-    }
-
-    &.current_page_item > a,
-    &.current_page_ancestor > a {
-      color: white;
+      z-index: 2;
       background: $primary-color;
+      cursor: pointer;
+      outline: none;
+      box-shadow: none;
+      color: white;
       &:after {
         border-top: 6px solid white;
       }
     }
-
-    /*Level 2*/
-    &:hover,
-    &:focus-within {
-      & > a {
-        background: $primary-color;
-        cursor: pointer;
-        outline: none;
-        color: white;
-        &:after {
-          border-top: 6px solid white;
-        }
-      }
-
-      & > .sub-menu {
-        visibility: visible;
-        opacity: 1;
-      }
+    & > .sub-menu {
+      visibility: visible;
+      opacity: 1;
     }
-    .sub-menu {
-      background: white;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-      visibility: hidden;
-      opacity: 0;
-      position: absolute;
-      transition: all 100ms ease-in !important;
-      margin-top: $dropdown-gap;
-      top: calc(100% + $dropdown-gap);
-      left: 0;
-      z-index: 1;
-      white-space: nowrap;
-      list-style: none;
-      margin: 0;
-      padding-left: 0;
+  }
+}
 
-      .menu-item {
-        padding: 0;
-        /*Level 3*/
-        .sub-menu {
-          top: 0;
-          left: calc(100% + $dropdown-gap);
-        }
+ul.primary-navigation li.menu-item > a {
+  display: inline-block;
+  width: 100%;
+  padding: 1rem;
+  color: black;
+  text-decoration: none;
+}
+
+ul.primary-navigation li.menu-item.menu-item-has-children {
+  position: relative;
+  & {
+    > a {
+      &:after {
+        content: '';
+        border: 4px solid transparent;
+        border-top: 6px solid grey;
+        margin-left: 10px;
+        margin-bottom: 4px;
+        display: inline-block;
+        vertical-align: bottom;
       }
     }
   }
 }
 
-nav {
-  position: relative !important;
+// 1st level menu items
+ul.primary-navigation > li.menu-item {
+  &.menu-item-has-children {
+    border-bottom: $dropdown-gap solid red;
+    margin-bottom: -$dropdown-gap;
+  }
 }
 
-.mega-menu {
+// 2nd level menu
+ul.primary-navigation > li.menu-item > ul.sub-menu {
+  background: white;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  top: calc(100% + $dropdown-gap);
+}
+
+// 2nd level menu items
+ul.primary-navigation > li.menu-item > ul.sub-menu > li.menu-item {
+}
+
+// 3rd level menu
+ul.primary-navigation > li.menu-item > ul.sub-menu > li.menu-item ul.sub-menu {
+  background: white;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  top: 0;
+  left: calc(100%);
+  border-left: $dropdown-gap solid red;
+  //margin-left: $dropdown-gap;
+}
+
+li.mega-menu {
   position: initial !important;
   & > ul {
     top: unset !important;
